tests/good/binop/multiple_operations.go
package main

import "fmt"

func main() {
	fmt.Print(1+(4/(3-(5-2)*2)+12)-3, "\n")
}

/*
== Expected program output ==
9
*/
